Fix boost meter visibility

--- a/src/modules/main/channels/_channels.scss
+++ b/src/modules/main/channels/_channels.scss
@@ -41,7 +41,7 @@
 
     // Remove boost goal meter
     // DEV: 2021-12-04 - Testing, removes boost goal meter
-    .container-1eD8xH{
+    .container-2giAcK{
         display: none;
     }
     .content-2a4AW9 > div[style="height: 16px;"]{
